--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,21 @@
 [package]
 name = "msg-terminal"
 version = "0.1.0"
-authors = ["whoisprivalov <nikita.karatsev@gmail.com>"]
 edition = "2018"
+authors = ["Nikita Karatsev (NotAPattern) <nikita.karatsev@gmail.com>"]
+description = "Text user interface (TUI) client for some social network"
+readme = "README.md"
+repository = "https://github.com/NotAPattern/msg-terminal/tree/rust-develop"
+license-file = "LICENSE"
+keywords = ["messanger", "tui", "terminal", "social network"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+argh = "0.1"
+unicode-width = "*"
+rand = "*"
+serde_json = "*"
+tui = { version = "*", git = "https://github.com/fdehau/tui-rs", default-features = true }
+termion = "*"
+
