--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ keywords = ["messanger", "tui", "terminal", "social network"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-argh = "0.1"
-unicode-width = "*"
-rand = "*"
+#cursive = "*"
 serde_json = "*"
-tui = { version = "*", git = "https://github.com/fdehau/tui-rs", default-features = true }
 termion = "*"
 
+[dependencies.cursive]
+version = "*"
+default-features = false
+features = ["termion-backend"]
