--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Text user interface (TUI) client for some social network"
 readme = "README.md"
 repository = "https://github.com/NotAPattern/msg-terminal/tree/rust-develop"
 license-file = "LICENSE"
-keywords = ["messanger", "tui", "terminal", "social network"]
+keywords = ["messenger", "tui", "terminal", "social network"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -17,6 +17,6 @@ serde_json = "*"
 termion = "*"
 
 [dependencies.cursive]
-version = "*"
+version = "0.16.3"
 default-features = false
-features = ["termion-backend"]
+features = ["termion-backend", "toml"]
