--- a/src/assets/style.toml
+++ b/src/assets/style.toml
@@ -1,7 +1,8 @@
 # Every field in a theme file is optional.
 
 shadow = false
-borders = "outset" # Alternatives are "none" and "simple"
+borders = "simple" 
+#"outset" # Alternatives are "none" and "simple"
 
 # Base colors are red, green, blue,
 # cyan, magenta, yellow, white and black.
@@ -16,17 +17,18 @@ borders = "outset" # Alternatives are "none" and "simple"
 
 	# If the value is an array, the first valid
 	# and supported color will be used.
-	background = ["#cdf6cd", "454", "magenta"]
+	background = ["blue"] 
+	#["#0D1017"]
 
 	# If the terminal doesn't support custom color (like the linux TTY),
 	# non-base colors will be skipped.
-	shadow     = ["#222288", "blue"]
-	view       = "111"
+	#shadow     = ["#000000"]
+	#view       = "111"
 
 	# An array with a single value has the same effect as a simple value.
-	primary   = ["white"]
-	secondary = "#EEEEEE"
-	tertiary  = "#252521"
+	primary   = ["#0D1017"]
+	secondary = "#59C2FF"
+	tertiary  = "#39BAE6"
 
 	# Hex values can use lower or uppercase.
 	# (base color MUST be lowercase)
