--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "msg-terminal"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 authors = ["Nikita Karatsev (NotAPattern) <nikita.karatsev@gmail.com>"]
 description = "Text user interface (TUI) client for some social network"
 readme = "README.md"
@@ -13,9 +13,10 @@ keywords = ["messenger", "tui", "terminal", "social network"]
 
 [dependencies]
 #cursive = "*"
-serde_json = "*"
+#serde_json = "*"
 termion = "*"
 cfg-match = "0.2.1"
+toml="*"
 
 [dependencies.cursive]
 version = "0.16.3"
