--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ keywords = ["messenger", "tui", "terminal", "social network"]
 termion = "*"
 cfg-match = "0.2.1"
 toml="*"
-config = "0.11.0"
+#msg_config = { path = "src/msg_config"}
 
 [dependencies.cursive]
 version = "0.16.3"
@@ -25,4 +25,4 @@ default-features = false
 features = ["termion-backend", "toml"]
 
 #[dependencies.config]
-#path="../"
+#path="../src/msg_config"
