--- a/src/assets/config.toml
+++ b/src/assets/config.toml
@@ -1,7 +1,3 @@
-[package]
+# [package]
 name = "toml"
 version = "0.4.2"
-authors = ["Alex Crichton <alex@alexcrichton.com>"]
-
-[dependencies]
-serde = "1.0"
