--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Nikita Karatsev (NotAPattern) <nikita.karatsev@gmail.com>"]
 description = "Text user interface (TUI) client for some social network"
 readme = "README.md"
-repository = "https://github.com/NotAPattern/msg-terminal/tree/rust-develop"
+repository = "https://github.com/NotAPattern/msg-terminal"
 license-file = "LICENSE"
 keywords = ["messenger", "tui", "terminal", "social network"]
 
@@ -13,15 +13,15 @@ keywords = ["messenger", "tui", "terminal", "social network"]
 
 [dependencies]
 #cursive = "*"
-#serde_json = "*"
+serde = "*"
+serde_derive = "*"
 termion = "*"
-cfg-match = "0.2.1"
 toml="*"
-serde="*"
+#serde="*"
 #msg_config = { path = "src/msg_config"}
 
 [dependencies.cursive]
-version = "0.16.3"
+version = "0.17.0"
 default-features = false
 features = ["termion-backend", "toml"]
 
